minor fix for button align

--- a/frontend/components/Form/LoginForm/LoginForm.module.scss
+++ b/frontend/components/Form/LoginForm/LoginForm.module.scss
@@ -14,6 +14,7 @@
         gap: 10px;
 
         button {
+            margin-top: 10px;
             @media only screen and (max-width: 400px) {
                 font-size: 0.8rem;
             }
